# discordo

./: .gitignore  .goreleaser.yaml  ANALISE_BUGS.md  BUGS_SUMARIO.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile.docker  README.md  attachment_image.go  channels_tree.go  config.go  discord.go  discordo.go  documentation.md  flake.nix  go.mod  go.sum  go.work  go.work.sum  guilds_tree.go  login_form.go  logs.txt  lol.yml  main.go  main_flex.go  message_input.go  messages_text.go  plugin.go  renderer.go  state.go  ui.go  util.go
cli/: go.mod  go.sum
clipboard/: clipboard.go  clipboard_linux.go
cmd/: app.go  application.go  attachment_image.go  chatview.go  guilds_tree.go  layout.go  login_form.go  main_flex.go  members.go  message_box.go  message_input.go  messages_list.go  messages_text.go  root.go  run.go  state.go  status_bar.go  user_list.go
config/: Cargo.toml  config.go  config.js  config.lua  constants.go  general.go  keybindings.go  keys.go  mod.go  pkg.go  plugin.go  template.go  theme.go
core/: core.go
discord/: login.go  markdown.go  markdown_test.go  mod.go  util.go
discordmd/: discordmd.go  discordmd_test.go
doc/: config.md
docs/: README.md  (+3 more)
tui/: Cargo.toml  go.mod  go.sum
tui/cmd/: application.go  guilds_tree.go  message_input.go  messages_text.go  root.go  state.go
tui/internal/config/: config.go  keys.go
tui/internal/consts/: consts_linux.go
tui/internal/logger/: logger.go
tui/internal/login/: form.go
tui/internal/notifications/: notifications.go
tui/internal/ui/: util.go
tui/src/: chat.rs  login.rs  main.rs  root.rs
(+235 files in other folders)
